# Wallpaper-Automata

./: .gitignore  LICENSE  README.md  main.py  requirements.txt  setup.bak.py  setup.cfg  setup.py
WallpaperAutomater.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: config.yml  secrets.yml  test_file.bak.yml  test_file.yml
tests/: test_configurations.py  test_reddit.py
tests/providers/: test_pexels.py  test_pexels_constructor.py
wallauto/: default_settings.py  main.py  reddit.py  settings.py  sqlite_connector.py  wall_configs.py  wallpaper.py  wallpaperSetter.py  yamlmanager.py
wallauto/data/: config.yml  secrets.yml
wallauto/data/test_area/: test_settings.yml
wallauto/providers/: __init__.py  pexles.py  pexles_constructor.py
wallauto/tests/: test_configurations.py  test_yamlmanager.py
