[metadata]
name = Wallpaper_Automata
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quattrococodrilo/Wallpaper-Automater
author = Fernando Cruz
author_email = quattrococodrilo@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    Pillow
    pylint
    pyyaml

[options.packages.find]
exclude =
    tests*
    data*

[options.entry_points]
console_scripts =
    wallpaper = wallauto.bin.entry_point:selector
